新規登録、ログイン、ログアウトが行えるよう実装

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <%= @minimum_password_length %>文字まで
+    <%= @minimum_password_length %>文字以上
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
