--- a/app/views/share/_form.html.erb
+++ b/app/views/share/_form.html.erb
@@ -7,7 +7,7 @@
 
   <div>着られる時期</div>
   <%= f.text_area :season, class:"season-text", id:"season-text", placeholder:"着用時期（40文字まで）", maxlength:"40" %>
-  
+
   <div>色や柄</div>
   <%= f.text_area :color_pattern, class:"color_pattern_text", id:"color_pattern_text", placeholder:"色や柄（40文字まで）", maxlength:"40" %>
 
@@ -19,11 +19,11 @@
                   class:'select-wore-date',
                   id:"wore-date",
                   use_month_numbers: true,
-                  prompt:'---'
+                  prompt:'---',
                   start_year: 2020,
                   end_year: (Time.now.year + 1),
                   date_separator: '%s'),
-                "<p>年</p>", "<p>月</p>") + "<p> 日 </p>" %>
+                "年", "月") + "日" %>
   </div>
 
   <div class="input-cleaned-date">
@@ -34,11 +34,11 @@
                   class:'select-cleaned-date',
                   id:"cleaned-date",
                   use_month_numbers: true,
-                  prompt:'---'
+                  prompt:'---',
                   start_year: 2010,
                   end_year: (Time.now.year + 1),
                   date_separator: '%s'),
-                "<p>年</p>", "<p>月</p>") + "<p> 日 </p>" %>
+                "年", "月") + "日" %>
   </div>
 
   <div>メモ</div>
