エラーハンドリングが表示されるよう実装

--- a/app/views/kimonos/new.html.erb
+++ b/app/views/kimonos/new.html.erb
@@ -2,6 +2,8 @@
   <div class="kimono-box">
     <div>着物をしまう</div>
 
+    <%= render "share/error_messages", model: f.object %>
+
     <div class="img-upload">
       <div>画像</div>
       <div class="click-upload">
