--- a/app/views/kimonos/index.html.erb
+++ b/app/views/kimonos/index.html.erb
@@ -1,1 +1,19 @@
 <h1>トップページ</h1>
+
+<div class='contents'>
+  <div class='title'>きもの</div>
+  <ul class='lists'>
+    <% @kimono.each do |kimono| %>
+      <li class='list'>
+        <%= link_to "#" do %>
+          <%= image_tag kimono.image, class: "kimono-img" if kimono.image.attached?%>
+          <div class='info'>
+            <div class='kimono-name'>
+              <%= kimono.kimono_name.name %>
+            </div>
+          </div>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+</div>
