--- a/app/views/kimonos/index.html.erb
+++ b/app/views/kimonos/index.html.erb
@@ -1,5 +1,9 @@
 <h1>トップページ</h1>
 
+<div>
+  <%= link_to "着物をしまう", new_kimono_path, class: "post" %>
+</div>
+
 <div class='contents'>
   <div class='title'>きもの</div>
   <ul class='lists'>
