エラーハンドリングを設置

--- a/app/views/kimonos/edit.html.erb
+++ b/app/views/kimonos/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="kimono-box">
     <div>編集</div>
 
-    <%# <%= render "share/error_messages", model: f.object %> %>
+    <%= render "share/error_messages", model: f.object %>
 
     <div class="img-upload">
       <div>画像</div>
