--- a/app/views/kimonos/show.html.erb
+++ b/app/views/kimonos/show.html.erb
@@ -47,3 +47,6 @@
 <div>
   <%= link_to "編集", edit_kimono_path(@kimono.id), class: "post" %>
 </div>
+<div>
+  <%= link_to "削除", kimono_path(@kimono.id), method: :delete, class: "destroy"%>
+</div>
