--- a/app/views/kimonos/index.html.erb
+++ b/app/views/kimonos/index.html.erb
@@ -11,9 +11,9 @@
     <% @kimonos.each do |kimono| %>
       <li class='list'>
         <%= link_to kimono_path(kimono.id) do %>
-          <%= image_tag kimono.image.variant(resize: '300x300'), class: "kimono-img" if kimono.image.attached?%>
+          <%= image_tag kimono.image.variant(resize: '300x300'), class: "goods-img" if kimono.image.attached?%>
           <div class='info'>
-            <div class='kimono-name'>
+            <div class='goods-name'>
               <%= kimono.kimono_name.name %>
             </div>
           </div>
