ヘッダーの作成、各一覧ページへのリンク

--- a/app/views/kimonos/edit.html.erb
+++ b/app/views/kimonos/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render "share/header" %>
+
 <%= form_with model: @kimono, url: kimono_path(@kimono.id), local: true do |f| %>
   <div class="kimono-box">
     <div>編集</div>
