--- a/app/views/kimonos/show.html.erb
+++ b/app/views/kimonos/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "share/header" %>
+
 <%# 画像 %>
 <div class="img-contents">
   <%= image_tag @kimono.image.variant(resize: '500x500'), class:"img-box"%>
