--- a/app/views/kimonos/new.html.erb
+++ b/app/views/kimonos/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "share/header" %>
+
 <%= form_with model: @kimono, url: kimonos_path, local: true do |f| %>
   <div class="kimono-box">
     <div>着物をしまう</div>
