--- a/app/views/obis/new.html.erb
+++ b/app/views/obis/new.html.erb
@@ -1,10 +1,10 @@
 <%= render "share/header" %>
 
-<%= form_with model: @kimono, url: kimonos_path, local: true do |f| %>
+<%= form_with model: @obi, url: obis_path, local: true do |f| %>
   <div class="goods-box">
-    <div>着物をしまう</div>
+    <div>帯をしまう</div>
 
-    <%= render "share/error_messages", model: f.object %>
+    <%# <%= render "share/error_messages", model: f.object %> %>
 
     <div class="img-upload">
       <div>画像</div>
@@ -15,13 +15,9 @@
     </div>
 
     <div>種類</div>
-    <%= f.collection_select(:kimono_name_id, KimonoName.all, :id, :name, {}, {class:"kimono-name-select"}) %>
-
-    <div>分類</div>
-    <%= f.collection_select(:kimono_genre_id, KimonoGenre.all, :id, :name, {}, {class:"kimono-genre-select"}) %>
+    <%= f.collection_select(:obi_name_id, ObiName.all, :id, :name, {}, {class:"obi-name-select"}) %>
 
     <%= render partial: "share/form", locals: { f: f } %>
-
 
     <%= f.submit "タンスにしまう", class:"btn" %>
   </div>
