ログイン時のみ各一覧ページのリンクを表示

--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -15,8 +15,10 @@
 
   <%# 各一覧ページへのリンク %>
   <div class="to-index-links">
-    <%= link_to "着物", kimonos_path, class: :header_button %>
-    <%= link_to "帯", obis_path, class: :header_button %>
-    <%= link_to "小物", "#", class: :header_button %>
+    <% if user_signed_in? %>
+      <%= link_to "着物", kimonos_path, class: :header_button %>
+      <%= link_to "帯", obis_path, class: :header_button %>
+      <%= link_to "小物", "#", class: :header_button %>
+    <% end %>
   </div>
 </header>
