--- a/app/views/kimonos/edit.html.erb
+++ b/app/views/kimonos/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render "share/header" %>
 
 <%= form_with model: @kimono, url: kimono_path(@kimono.id), local: true do |f| %>
-  <div class="kimono-box">
+  <div class="edit-box">
     <div>編集</div>
 
     <%= render "share/error_messages", model: f.object %>
