一覧が表示されるよう修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,7 +10,7 @@
   <div class='title'>小物</div>
   <ul class='lists'>
     <% if user_signed_in? %>
-    <% @items.each do |obi| %>
+    <% @items.each do |item| %>
       <li class='list'>
         <%= link_to item_path(item.id) do %>
           <%= image_tag item.image.variant(resize: '300x300'), class: "goods-img" if item.image.attached?%>
