--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -4,7 +4,7 @@
   <div class="goods-box">
     <div>小物をしまう</div>
 
-    <%# <%= render "share/obi_error_messages", model: f.object %> %>
+    <%= render "share/item_error_messages", model: f.object %>
 
     <div class="img-upload">
       <div>画像</div>
