--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -1,3 +1,4 @@
+
 <header class="header">
 
   <div class="header_logo">
@@ -5,7 +6,7 @@
     <%= link_to image_tag("kimono_logo.png", class:"kimono_logo"), "/" %>
 
     <%# メニュー %>
-    <div class="nemu">
+    <div class="menu" id="menu">
       <%= image_tag "menu_logo.png", class:"menu_logo" %>
 
       <%# ログイン時は、ログアウト・ユーザー名を表示 %>
@@ -33,3 +34,4 @@
     </div>
   </div>
 </header>
+<script scr="_header.js"></script>
