--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -1,36 +1,50 @@
 
 <header class="header">
 
-  <div class="header_logo">
+  <div class="header-logo">
     <%# ロゴ画像 %>
     <%= link_to image_tag("kimono_logo.png", class:"kimono_logo"), "/" %>
 
     <%# メニュー %>
     <div class="menu" id="menu">
-      <%= image_tag "menu_logo.png", class:"menu_logo" %>
+      <%= image_tag "menu_logo.png", class:"menu-logo" %>
 
-      <%# ログイン時は、ログアウト・ユーザー名を表示 %>
-      <% if user_signed_in? %>
-        <div class="header_btn">
-          <%= link_to "ログアウト",  destroy_user_session_path, method: :delete, class: :header_logout %>
-          <%= link_to "#{current_user.nickname}", "#", class: :header_button %>
-        </div>
-      <%# 未ログイン時は、新規登録・ログインを表示 %>
-      <% else %>
-        <div class="header_btn">
-          <%= link_to "ログイン", new_user_session_path, class: :header_button %>
-          <%= link_to "新規登録", new_user_registration_path, class: :header_button %>
-        </div>
-      <% end %>
-
-      <%# 各一覧ページへのリンク %>
-      <div class="to-index-links">
-        <% if user_signed_in? %>
-          <%= link_to "着物", kimonos_path, class: :header_button %>
-          <%= link_to "帯", obis_path, class: :header_button %>
-          <%= link_to "小物", items_path, class: :header_button %>
+      <%# メニューのプルダウン %>
+      <div class="menu-lists hidden" id="pull-down">
+        <%# 未ログイン時は、新規登録・ログインを表示 %>
+        <% unless user_signed_in? %>
+          <div class="not-login-menu">
+            <li class="menu-bar">
+              <%= link_to "ログイン", new_user_session_path, class: :headerbutton %>
+            </li>
+            <li class="menu-bar">
+              <%= link_to "新規登録", new_user_registration_path, class: :header_button %>
+            </li>
+          </div>
         <% end %>
+
+        <%# ログイン中のメニュー %>
+        <div class="now-login-menu">
+          <% if user_signed_in? %>
+            <li class="menu-bar">
+              <%= link_to "着物", kimonos_path, class: :header_button %>
+            </li>
+            <li class="menu-bar">
+              <%= link_to "帯", obis_path, class: :header_button %>
+            </li>
+            <li class="menu-bar">
+              <%= link_to "小物", items_path, class: :header_button %>
+            </li>
+            <li class="menu-bar">
+              <%= link_to "#{current_user.nickname}", "#", class: :header_button %>
+            </li>
+            <li class="menu-bar">
+              <%= link_to "ログアウト",  destroy_user_session_path, method: :delete, class: :header_logout %>
+            </li>
+          <% end %>
+        </div>
       </div>
+
     </div>
   </div>
 </header>
