--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,13 @@
+<%= render "share/header" %>
+<link rel="stylesheet" href="devise/registrations/new.css">
+
 <h2>新規登録</h2>
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
   <%= render "devise/shared/error_messages", model: f.object %>
 
   <div class="field">
-    <%= f.label :nickname %>10文字まで<br />
+    <%= f.label :nickname %>（10文字まで）<br />
     <%= f.text_field :nickname, autofocus: true, maxlength: "10" %>
   </div>
 
@@ -16,7 +19,7 @@
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <%= @minimum_password_length %>文字以上
+    （<%= @minimum_password_length %>文字以上）
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
@@ -31,4 +34,5 @@
   </div>
 <% end %>
 
+<%= render "share/footer" %>
 <%= render "devise/shared/links" %>
