submitボタン作成

--- a/app/assets/stylesheets/devise/registrations/new.css
+++ b/app/assets/stylesheets/devise/registrations/new.css
@@ -33,7 +33,7 @@
   font-size: 17px;
 }
 
-input {
+.field-holder {
   min-width: 300px;
   width: 25vw;
   height: 30px;
@@ -43,5 +43,13 @@ input {
 .submit {
   margin-top: 100px;
   margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
 }
 
+.sign-btn {
+  width: 15vw;
+  height: 50px;
+  font-size: 20px;
+  background-color: white;
+}
