ログイン画面作成

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <%= render "share/header" %>
-<link rel="stylesheet" href="devise/registrations/new.css">
+<link rel="stylesheet" href="devise/new.css">
 
-<div class="sign-up">
-  <div class="registration-header">
+<div class="sign-page">
+  <div class="log-header">
     <h2 class="title">新規登録</h2>
   </div>
 
