--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -1,9 +1,9 @@
-.sign-up {
+.sign-page {
   width: 100vw;
   padding: 2vh 5vw;
 }
 
-.registration-header {
+.log-header {
   height: 200px;
   display: flex;
   justify-content: center;
@@ -49,6 +49,7 @@
 
 .sign-btn {
   width: 15vw;
+  min-width: 120px;
   height: 50px;
   font-size: 20px;
   background-color: white;
