新規登録、ログインのエラー表示

--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -34,7 +34,7 @@
 }
 
 .field-holder {
-  min-width: 300px;
+  min-width: 350px;
   width: 25vw;
   height: 30px;
   font-size: 17px;
@@ -53,4 +53,8 @@
   height: 50px;
   font-size: 20px;
   background-color: white;
+}
+
+.login-flash-message {
+  margin-bottom: 40px;
 }
