--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -38,6 +38,7 @@
   width: 25vw;
   height: 30px;
   font-size: 17px;
+  font-family: serif;
 }
 
 .submit {
@@ -52,6 +53,7 @@
   min-width: 120px;
   height: 50px;
   font-size: 20px;
+  font-family: serif;
   background-color: white;
 }
 
