kimono/new.css作成

--- a/app/views/kimonos/new.html.erb
+++ b/app/views/kimonos/new.html.erb
@@ -34,10 +34,9 @@
 
       <%= render partial: "share/form", locals: { f: f } %>
 
-    <div class="new-submit">
-      <%= f.submit "タンスにしまう", class:"goods-rgbtn" %>
-    </div>
-      
+      <div class="new-submit">
+        <%= f.submit "タンスにしまう", class: 'goods-rgbtn' %>
+      </div>
     <% end %>
   </div>
 </div>
