--- a/app/assets/stylesheets/kimonos/new.css
+++ b/app/assets/stylesheets/kimonos/new.css
@@ -30,5 +30,49 @@
 }
 
 .field {
+  min-width: 300px;
+  width: 30vw;
+  padding: auto;
   margin-bottom: 30px;
+  /* background-color: skyblue; */
+}
+
+.field-name {
+  margin-bottom: 15px;
+  font-size: 17px;
+}
+
+.pulldown-select {
+  min-width: 200px;
+  width: 25vw;
+  height: 30px;
+  font-size: 17px;
+  font-family: serif;
+}
+
+.goods-text {
+  min-width: 300px;
+  width: 30vw;
+  height: 100px;
+}
+
+.new-submit {
+  width: 100vw;
+  padding: 2vh 5vw;
+  margin-top: 100px;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.goods-rgbtn {
+  width: 15vw;
+  min-width: 150px;
+  height: 50px;
+  font-size: 20px;
+  font-family: serif;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
