kimono.newのエラー表示修正

--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="devise/shared/error.messages.css">
+
 <div  class="error_message">
 <% if resource.errors.any? %>
   <div id="error_explanation">
