--- a/app/views/share/_error_messages.html.erb
+++ b/app/views/share/_error_messages.html.erb
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="devise/shared/error.messages.css">
+
+<div class="error_message">
 <% if @kimono.errors.any? %>
   <div id="error_explanation", class="alert alert-danger">
     <ul>
@@ -7,3 +10,4 @@
     </ul>
   </div>
 <% end %>
+</div>
