obi.newのエラー表示修正

--- a/app/views/obis/new.html.erb
+++ b/app/views/obis/new.html.erb
@@ -4,7 +4,7 @@
 <div class="new-page">
 
   <div class="new-header">
-    <h2 class="new-title">
+    <h2 class="new-title">帯をしまう</h2>
   </div>
 
   <hr class="line">
