--- a/app/views/kimonos/show.html.erb
+++ b/app/views/kimonos/show.html.erb
@@ -1,11 +1,11 @@
 <%= render "share/header" %>
-<link rel="stylesheet" href="kimonos/edit.css">
+<link rel="stylesheet" href="kimonos/show.css">
 
-<div class="edit-page">
+<div class="show-page">
 
   <hr class="line">
 
-  <div class="goods-name-edit">
+  <div class="goods-name-show">
     <%= @kimono.kimono_name.name %>
   </div>
 
