--- a/app/views/obis/show.html.erb
+++ b/app/views/obis/show.html.erb
@@ -1,50 +1,61 @@
 <%= render "share/header" %>
+<link rel="stylesheet" href="kimonos/show.css">
 
-<%# 画像 %>
-<div class="img-contents">
-  <%= image_tag @obi.image.variant(resize: '500x500'), class:"img-box"%>
-</div>
+<div class="show-page">
 
-<div class="details-box">
+  <hr class="line">
 
-  <%# 種類 %>
-  <div class="detail-goods">
+  <div class="goods-name-show">
     <%= @obi.obi_name.name %>
   </div>
-  <%# TPO %>
-  <div class="detail-goods">
-    <%= @obi.tpo.name %>
-  </div>
-  <%# 色柄 %>
-  <div class="detail-goods">
-    <%= @obi.color_pattern %>
-  </div>
-  <%# 時期 %>
-  <div class="detail-goods">
-    <%= @obi.season %>
-  </div>
-  <%# 材質 %>
-  <div class="detail-goods">
-    <%= @obi.material.name %>
-  </div>
-  <%# 最新着用日 %>
-  <div class="detail-goods">
-    <%= @obi.wore_date %>
-  </div>
-  <%# 最新お手入れ日 %>
-  <div class="detail-goods">
-    <%= @obi.cleaned_date %>
-  </div>
-  <%# メモ %>
-  <div class="detail-goods">
-    <%= @obi.memo %>
-  </div>
-  
-</div>
 
-<div>
-  <%= link_to "編集", edit_obi_path(@obi.id), class: "post" %>
+  <div class="show-img-contents">
+    <%= image_tag @obi.image.variant(resize: '500x500'), class:"img-box"%>
+  </div>
+
+  <div class="details-box">
+
+    <div class="detail-goods">
+      <div class="detail-name">TPO</div>
+      <%= @obi.tpo.name %>
+    </div>
+
+    <div class="detail-goods">
+      <div class="detail-name">素材</div>
+      <%= @obi.material.name %>
+    </div>
+
+    <div class="detail-goods">
+      <div class="detail-name">色・柄</div>
+      <div class="detail-text"><%= @obi.color_pattern %></div>
+    </div>
+
+    <div class="detail-goods">
+      <div class="detail-name">時期</div>
+      <div class="detail-text"><%= @obi.season %></div>
+    </div>
+
+    <div class="detail-goods">
+      <div class="detail-name">最近着た日</div>
+      <%= @obi.wore_date %>
+    </div>
+
+    <div class="detail-goods">
+      <div class="detail-name">お手入れ日</div>
+      <%= @obi.cleaned_date %>
+    </div>
+
+    <div class="detail-goods">
+      <div class="detail-name">メモ</div>
+      <div class="detail-text"><%= @obi.memo %></div>
+    </div>
+  </div>
+
+  <div class="edit-btn">
+    <%= link_to "編集", edit_obi_path(@obi.id), class: "edit" %>
+  </div>
+  <div class="destroy-btn">
+    <%= link_to "削除", obi_path(@obi.id), method: :delete, class: "destroy"%>
+  </div>
 </div>
-<div>
-  <%= link_to "削除", obi_path(@obi.id), method: :delete, class: "destroy"%>
-</div>
+<%= render "share/footer" %>
